@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3354 2003/09/13 08:42:19 jlam Exp $
+$NetBSD: CHANGES,v 1.3355 2003/09/13 09:24:07 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -3668,3 +3668,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated quagga to 0.96.2nb1 [salo 2003-09-13]
 	Updated freetype2 to 2.1.5 [adam 2003-09-13]
 	Updated p5-Time-HiRes to 1.50 [jlam 2003-09-13]
+	Updated pkg_install to 20030913 [jlam 2003-09-13]
